<resources>
    <string name="app_name">Arena Mobile</string>
    <string name="title_activity_login">Arena Login</string>
    <string name="title_activity_register">Arena Sign-up</string>
    <string name="title_activity_Operator">Welcome Operator</string>
    <string name="title_activity_LeagueOwner">Welcome League Owner</string>
    <string name="title_activity_Player">Welcome Player</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usernameFieldHint">Username</string>
    <string name="passwordFieldHint">Password</string>
    <string name="button_LoginText">Login</string>
    <string name="button_RegisterText">Register</string>
    <string name="register_text_UserRegisterLink">New User? Click here to register.</string>
    <string name="login_text_UserLoginLink">Already a user? Click here to Login.</string>
    <string name="welcomeUserText">Welcome</string>
    <string name="title_activity_operator">activity_operator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_operator_message">Operator Home Page</string>
    <string name="mange_users_fragment_message">Mange Users Fragment</string>
    <string name="mange_arenas_fragment_message">Mange Arenas Fragment</string>
    <string name="mange_games_fragment_message">Mange Games Fragment</string>
    <string name="operator_ManageGame_ET_GameName">Game Name</string>
    <string name="operator_ManageGame_AddBTN">ADD</string>
    <string name="operator_home_page_message">Operator Home Page</string>
    <string name="manageuserBTN_accept">Accept</string>
    <string name="manageUsersBTN_deny">Deny</string>
    <string name="title_activity_league_owner">LeagueOwnerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guest">GuestActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
